--- a/team.html
+++ b/team.html
@@ -233,11 +233,11 @@
           </div>
           <div class="profile_personal_right">
             <h4><b>IT Interest</b></h4>
-            <p>text</p>
+            <p>Electrotechnology, Hardware, Computer Graphics, Video Game Development </p>
             <h4><b>IT Experience</b></h4>
-            <p>text</p>
-            <h4><b>Ideal Job</b></h4>
-            <p>text</p>
+            <p>Gabe’s in-depth knowledge of electrotechnology brands him as a hardware specialist. The electrician industry has allowed Gabe to learn the design, maintenance, installation, and repair of many forms of electrical and electronic equipment. Studying the construction of micro processers instils Gabe with a craving to understand ‘how things work’ from end-to-end. Now studying a Bachelor of Information Technology Gabe is in search of further meaning to appreciate more complicated hardware design and information systems.</p>
+            <h4><b>Ideal Job: IT Technician</b></h4>
+            <p>Valuing the history of complex computer systems Gabe’s next step is to become an IT Technician and he isn’t just limiting his knowledge to hardware. With insightful comprehension for software planning and development Gabe can extend his support to production requests. Additionally, technicians are confronted with a multitude of problems, therefore Gabe’s talent for deep learning will be challenged at every opportunity.</p>
           </div>
         </div> <!-- profile_middle_flex -->
 
@@ -255,7 +255,7 @@
       <hr>
       <div class="profile_main">
         <div class="sub_header">
-          <h3><b>Name</b></h3>
+          <h3><b>Emre Altunsu</b></h3>
         </div>
         <div class="profile_middle_flex">
           <div class="profile_personal_main">
@@ -273,11 +273,11 @@
           </div>
           <div class="profile_personal_right">
             <h4><b>IT Interest</b></h4>
-            <p>text</p>
+            <p>NFT’s, Online Fund Raising, Online gaming</p>
             <h4><b>IT Experience</b></h4>
-            <p>text</p>
-            <h4><b>Ideal Job</b></h4>
-            <p>text</p>
+            <p>Emre’s aspiration studying a Bachelor of Information Technology is to graduate with the skills and knowledge to support his volunteer work at the Cancer Council Foundation. Emre has managed to lay an early foundation by beginning to explore web design and logic-based programming such as Python. These skills will setup Emre to build attractive technology to draw user attention toward charity work in an attempt to make aid more accessible among community. Emre’s vision is to make the world more accountable for their time and actions.</p>
+            <h4><b>Ideal Job: Systems Analyst</b></h4>
+            <p>Emre believes in lending a hand in whichever way possible, therefore the role of Systems Analyst is perfect for his character. A line of support for both operations and technology Emre will resolve requests from users and present them to the development team. It will be his responsibility to ensure the developers are building reliable product for end-users to experience on the front-line. Emre core duty is to translate the jargon of dense tech terminology and define it in a way that is understandable for the business. </p>
           </div>
         </div> <!-- profile_middle_flex -->
 
