--- a/team.html
+++ b/team.html
@@ -84,7 +84,7 @@
         <div class="profile_bottom_flex">
 
           <div class="profile_bottom_content">
-            <img src="" alt="strengths.png">
+            <img src="kaleid_images/team_profile_ideal_jobs/strengthweakness/mark_strengthweakness.png" alt="strengths.png">
           </div>
           
 
