--- a/team.html
+++ b/team.html
@@ -67,6 +67,7 @@
               <p>s3895337</p>
               <p>s3895337@student.rmit.edu.au</p>
               <p>Hobbies: Guitar, Cat.</p>
+              <p>Myer-Briggs: Debater.</p>
               
             </div>
 
@@ -105,7 +106,8 @@
               <p>Personal Information</p>
               <p>s3286616</p>
               <p>23286616@student.rmit.edu.au</p>
-              <p>Hobbies: Piano, Psychology.
+              <p>Hobbies: Piano, Psychology.</p>
+              <p>Myer-Briggs: Advocate. </p>
             </div>
 
           </div>
@@ -143,6 +145,7 @@
                <p>s394438</p>
                <p>s394438@student.rmit.edu.au</p>
                <p>Hobbies: Writing, Gaming.</p>
+               <p>Myer-Briggs: Advocate.</p>
             </div>
 
           </div>
@@ -181,6 +184,7 @@
               <p>s3955987</p>
               <p>s3955987@student.rmit.edu.au</p>
               <p>Hobbies: Food, Movies.</p>
+              <p>Myer-Briggs: Consul</p>
             </div>
 
           </div>
@@ -219,6 +223,7 @@
               <p>s3957629</p>
               <p>s3957629@student.rmit.edu.au</p>
               <p>Hobbies: Hardware, Graphics.</p>
+              <p>Myer-Briggs: Entrepreneur.</p>
             </div>
 
           </div>
@@ -256,7 +261,8 @@
               <p>Personal Information</p>
               <p>s3942994</p>
               <p>s3942994@student.rmit.edu.au</p>
-              <p>Hobbies: Tradings Cards, Charity.</p>        
+              <p>Hobbies: Tradings Cards, Charity.</p>
+              <p>Myer-Briggs: Architect.</p>
             </div>
 
           </div>
