--- a/team.html
+++ b/team.html
@@ -85,7 +85,7 @@
         <div class="profile_bottom_flex">
 
           <div class="profile_bottom_content">
-            <img src="kaleid_images/team_profile_ideal_jobs/strengthweakness/mark_strengthweakness.png" alt="strengths.png" width="1000px" length="auto">
+            <img src="kaleid_images/team_profile_ideal_jobs/strengthweakness/mark_strengthweakness.png" alt="strengths.png" width="1000px" length="auto" style="background-color:white">
           </div>
           
 
