--- a/team.html
+++ b/team.html
@@ -60,7 +60,7 @@
           <div class="profile_personal_main">
 
             <div class="profile_personal_content">
-              <img src="kaleid_images/team_profile_ideal_jobs/team/mark.png" alt="name_img.png">
+              <img src="kaleid_images/team_profile_ideal_jobs/team/mark.png" alt="name_img.png" width="120%" length="auto">
             </div>
             <div class="profile_personal_content">
               <p>Personal Information</p>
