--- a/team.html
+++ b/team.html
@@ -138,7 +138,7 @@
           <div class="profile_personal_main">
 
             <div class="profile_personal_content">
-              <img src="kaleid_images/team_profile_ideal_jobs/team/dom.png" alt="name_img.png">
+              <img src="kaleid_images/team_profile_ideal_jobs/team/dom.png" alt="name_img.png" width="90%" length="auto">
             </div>
             <div class="profile_personal_content">
               <p>Personal Information</p>
