--- a/team.html
+++ b/team.html
@@ -43,8 +43,7 @@
           <a href="work.html">Work</a> ·
           <a href="tech.html">Tech</a> ·
           <a href="project.html">Project</a> ·
-          <a href="agenda.html">Agenda</a> ·
-          <a href="job.html">Job Analysis</a>
+          <a href="agenda.html">Agenda</a>
         </p>
       </div> <!-- / .navigation_bar -->
 
