--- a/team.html
+++ b/team.html
@@ -284,7 +284,100 @@
 
         </div> <!-- / .profile_bottom_flex -->
       </div> <!-- / .profile_main -->
-      
+      <hr>
+      <div class="profile_main">
+        <h3><u>Ideal Job Analysis</u></h3>
+        <div class="sub_header">
+          <h3><b>Team Analysis</b></h3>
+        </div>
+        <p>text</p>
+        <p>text</p>
+        <h4><b>Myer-Briggs</b></h4>
+        <div class="table_job">
+          <p>Table</p>
+        </div>
+        <h4><b>Introduction</b></h4>
+        <p>text</p>
+        <h4><b>Advantages</b></h4>
+        <p>text</p>
+        <p>text</p>
+        <p>text</p>
+        <h4><b>Disadvantages</b></h4>
+        <p>text</p>
+        <p>text</p>
+        <p>text</p>
+      </div> <!-- / .profile_main -->
+      <hr>
+      <div class="profile_main">
+        <div class="sub_header">
+          <h3><b>Strengths & Weaknesses</b></h3>
+        </div>
+        <h4><b>Strengths</b></h4>
+
+        <div class="profile_bottom_flex">
+          <div class="profile_bottom_content">
+            <img src="" alt="strengths.png">
+          </div>
+          <div class="profile_bottom_content">
+            <p>Table</p>
+          </div>
+
+        </div>
+        <p>text</p>
+        <p>text</p>
+        <br>
+        <h4><b>Weaknesses</b></h4>
+
+        <div class="profile_bottom_flex">
+          <div class="profile_bottom_content">
+            <img src="" alt="weaknesses.png">
+          </div>
+          <div class="profile_bottom_content">
+            <p>Table</p>
+          </div> <!-- / .profile_bottom_content -->
+
+        </div> <!-- / .profile_bottom_flex -->
+        <p>text</p>
+        <p>text</p>
+      </div> <!-- / .profile_main -->
+      <hr>
+      <div class="profile_main">
+        <div class="sub_header">
+          <h3><b>Ideal Jobs</b></h3>
+        </div>
+        <p>text</p>
+        <p>text</p>
+        <div id="organizational_chart">
+          <img src="" alt="organizational_chart.png">
+        </div>
+        <p>text</p>
+        <br>
+        <h4><b>Similarities</b></h4>
+        <p>text</p>
+        <p>text</p>
+        <div class="sim_diff_img">
+          <img src="" alt="similarities.png">
+        </div>
+        <br>
+        <h4><b>Differences</b></h4>
+        <p>text</p>
+        <p>text</p>
+        <div class="sim_diff_img">
+          <img src="" alt="differences.png">
+        </div>
+        <p>text</p>
+      </div> <!-- / .profile_main -->
+      <hr>
+      <div class="profile_main">
+        <div class="sub_header">
+          References
+        </div>
+        <ol>
+          <li>reference1</li>
+          <li>reference2</li>
+          <li>reference3</li>
+        </ol>
+      </div> <!-- / .profile_main -->
     </main>
   </body>
 </html>
