--- a/work.html
+++ b/work.html
@@ -2,25 +2,8 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Group 1 : _____</title>
+    <title>Group 1 : IT Work</title>
     <link rel="stylesheet" href="styling.css">
-    <!-- script taken from w3schools.com at https://www.w3schools.com/howto/howto_js_collapsible.asp on 27/4/2022 -->
-    <script>
-      var coll = document.getElementsByClassName("transcript_collapsible");
-      var i;
-
-      for (i = 0; i < coll.length; i++) {
-        coll[i].addEventListener("click", function() {
-          this.classList.toggle("active");
-          var content = document.getElementsByClassName("transcript_content");
-          if (content.style.display === "block") {
-            content.style.display = "none";
-          } else {
-            content.style.display = "block";
-          }
-        });
-      }
-    </script>
   </head>
   <body>
     <header>
@@ -66,7 +49,6 @@
         <div class="organizational_chart" style="text-align: center;padding-top: 15px;">
           <p>not sure what tag to add but video goes here --> class includes required css like overflow: hidden;</p>
         </div>
-        <button type="button" name="button" class="transcript_collapsible">Transcript</button>
         <div class="transcript_content">
           <p>transcript content</p>
         </div>
