--- a/work.html
+++ b/work.html
@@ -52,16 +52,24 @@
         <div class="transcript_content">
           <p>transcript content</p>
         </div>
-        <h4><b>Who is the interviewee?</b></h4>
+        <div class="mini_header">
+          <h4><b>Who is the interviewee?</b></h4>
+        </div>
         <p>text</p>
         <p>text</p>
         <p>text</p>
-        <h4><b>Change in the IT Industry</b></h4>
+        <div class="mini_header">
+          <h4><b>Change in the IT Industry</b></h4>
+        </div>
         <p>text</p>
         <p>text</p>
-        <h4><b>Positives and Negatives of the IT profession</b></h4>
+        <div class="mini_header">
+          <h4><b>Positives and Negatives of the IT profession</b></h4>
+        </div>
         <p>text</p>
-        <h4><b>Conclusion</b></h4>
+        <div class="mini_header">
+          <h4><b>Conclusion</b></h4>
+        </div>
         <p>text</p>
       </div> <!-- / .profile_main -->
 
