--- a/team.html
+++ b/team.html
@@ -50,7 +50,7 @@
     </header>
     <main>
       <div class="profile_main">
-        <h3><u>Team Profile & Ideal Jobs</u></h3>
+        <h3><u>Team Profile &amp; Ideal Jobs</u></h3>
         <br>
         <div class="sub_header">
           <h3><b>Mark Schroeder</b></h3>
@@ -112,7 +112,7 @@
           </div>
           <div class="profile_personal_right">
             <h4><b>IT Interest</b></h4>
-            <p>Data Analysis, Machine Learning, Software Design & Implementation.</p>
+            <p>Data Analysis, Machine Learning, Software Design &amp; Implementation.</p>
             <h4><b>IT Experience</b></h4>
             <p>As a Business Analyst Jack is exposed to many facets of technology and business. He is the bridge the connects technology to operations and it’s his responsibility to improve operations through technology solutions. He has achieved this by utilising Six Sigma DMAIC and Agile Software Development. As an agent of change Jack is involved in the end-to-end process of product control; this involves facilitating meetings with developers, showcasing requirements, building quality assurance test cases and training users on the front-line.  </p>
             <h4><b>Ideal Job: Full-Stack Software Engineer</b></h4>
@@ -310,7 +310,7 @@
       <hr>
       <div class="profile_main">
         <div class="sub_header">
-          <h3><b>Strengths & Weaknesses</b></h3>
+          <h3><b>Strengths &amp; Weaknesses</b></h3>
         </div>
         <h4><b>Strengths</b></h4>
 
