--- a/project.html
+++ b/project.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Group 1 : _____</title>
+    <title>Group 1 : Project</title>
     <link rel="stylesheet" href="styling.css">
   </head>
   <body>
@@ -62,7 +62,7 @@
         </div>
         <p>text</p>
         <div class="mini_header">
-          <h4><b>Tools % Skills</b></h4>
+          <h4><b>Tools &amp; Skills</b></h4>
         </div>
         <p>text</p>
         <div class="mini_header">
