--- a/team.html
+++ b/team.html
@@ -290,22 +290,21 @@
         <div class="sub_header">
           <h3><b>Team Analysis</b></h3>
         </div>
-        <p>text</p>
-        <p>text</p>
+        <p>After reviewing each individual profile it’s clear that we are a Technology driven team. The team ranges from; three Software Engineers, one Technician who has a passion for both hardware and software, and one Systems Analyst who aspires to support applications in production. This demonstrates that the team is aligned across many aspects of studying Information Technology at RMIT, but one core element shines above the rest, the desire to understand programming languages. </p>
+        <p>But where does this desire come from? Each one of us has a different origin story pointing in the same direction. Dom, Yousef and Emre have just finished VCE, with Gabe and Mark only a year ahead, while Jack has returned to study 10 years after finishing school. There must be defining similarities that exist within the co-ordinated effort of this group and what differences arise when working together. The following team analysis required that each member detail their interest and experience in IT, along with their ambition to reach their end-goal job after graduation. To strengthen the team analysis members have provided their test results from the Myer-Briggs Personality test, and from two additional personality tests of their choosing. </p>
         <h4><b>Myer-Briggs</b></h4>
         <div class="table_job">
           <p>Table</p>
         </div>
         <h4><b>Introduction</b></h4>
-        <p>text</p>
+        <p>The Myer-Briggs Personality Test is a self-report questionnaire designed to reveal the user’s personality type. Each personality type has its own criteria of strengths, weaknesses, and preferences that a user is more likely to identify with (Cherry, 2020). It is important to note that the results are merely an indication of the user’s interpretation to the question, and the most crucial element to obtain from a self-assessed personality test is the awareness of self. </p>
         <h4><b>Advantages</b></h4>
-        <p>text</p>
-        <p>text</p>
-        <p>text</p>
+        <p>The compiled team results of the Myer-Briggs indicate that there is an even spread of personality types among the six members with the exception to assertiveness and turbulence. The team has a healthy mix of introverted and extroverted characters who can learn from each other, but this doesn’t necessarily indicate that the group will thrive. Listed are a few tips from Lepore (n.d.) that could encourage group success between introverts and extroverts.</p>
+        <p>Another positive is the even scores of thinking and feeling. Thinkers excel at technical and scientific fields when logic is vital, compared to feelers, who are more strategic at communicating change (myersbriggs.org, 2019). This creates a symbiotic relationship between empathetic characters and pragmatic theorists and could be considered advantageous for software development and implementation. Establishing and upholding key values will align the thinkers and feelers across the group and keep each other accountable. /p>
         <h4><b>Disadvantages</b></h4>
-        <p>text</p>
-        <p>text</p>
-        <p>text</p>
+        <p>Although the group has more judgers than prospectors, the two traits propose a clash between team members in respect to organisation. Judgers tend to rely on certainty and are more comfortable with direction, whereas prospectors prefer a spontaneous outlook (NERIS Analytics Limited, 2015). If the team have poor time-management skills and are mostly full of judging personalities, then determining project deadlines will help ease those who require control to complete their goals. Stress response can manifest itself physically (Everly, Rosenfeld & Allen (1981), therefore prospectors may have to sacrifice their laidback attitude to prioritise the healthy and safety of the group. </p>
+        <p>The group scored highest in assertiveness with only one member exhibiting tendencies of turbulence. With this many assertive individuals the group is at risk of overconfidence (NERIS Analytics Limited 2015), especially in a team environment. The behaviour could see members assume they know what is expected of each other rather than having the discussion. It would be beneficial if requirements were documented as per action item to steer the project on course and to keep members honest. </p>
+        <p>Sharing the results from the Myer-Briggs aids the team to analyse who each other are and provides further understanding of each other’s reactions and choices when dealing within a group. Considering this group is online, team members could review each other’s results of the Myer-Briggs test to increase familiarity before each meeting session. </p>
       </div> <!-- / .profile_main -->
       <hr>
       <div class="profile_main">
@@ -323,8 +322,8 @@
           </div>
 
         </div>
-        <p>text</p>
-        <p>text</p>
+        <p>We are skewed toward problem-solving, innovation and analysis, and the team consists of individuals who are great communicators and are team-orientated. Fortunately, these skills are favoured in the technology space and they align with the team’s evaluation (Point Jupiter, 2019). To expand further, large-scale software development cannot be achieved alone, it is important to build a team of subject-matter experts who are able to bring value to the projects journey. </p>
+        <p>One key strength missing from the group dynamic is leadership. This could be a result of our average age bracket and with minimal experience in the workforce, but leadership comes in more forms that just experience. The team may surprise each other when each member takes on different roles at different times. Leadership can look like, controlling the agenda and action items, directing project vison, or expressing resilience when the team is met with roadblocks (corporatetraining.usf.edu., n.d.). It is hard to forecast who will play which role and roles change over time, but if the team can spend moments in reflection at the end of each week, then they can assess their performance accurately and apply their self-learnings to their future work.</p>
         <br>
         <h4><b>Weaknesses</b></h4>
 
@@ -337,8 +336,8 @@
           </div> <!-- / .profile_bottom_content -->
 
         </div> <!-- / .profile_bottom_flex -->
-        <p>text</p>
-        <p>text</p>
+        <p>The team is at risk of a trifecta of weaknesses; time-management, impatience, and prioritisation. It’s concerning to imagine the group succumbing to their worst traits resulting in incomplete work and not prevailing these barriers. To avoid poor time-management and prioritisation it would be beneficial to create daily schedules, consolidate similar tasks together and evade the urge to multitask (Lucid Content Team, 2017). </p>
+        <p>Another major weakness that the team expressed is indecisiveness. It is alarming to compare this to the major strength problem-solving if there are scenarios that require time pressured critical thinking and risk mitigation. During moments of indecision extroverts of the group can control the room by taking polls on conflict and mediate streams of thought to create open-lines of communication (Dike 2021).  </p>
       </div> <!-- / .profile_main -->
       <hr>
       <div class="profile_main">
