--- a/team.html
+++ b/team.html
@@ -344,27 +344,27 @@
         <div class="sub_header">
           <h3><b>Ideal Jobs</b></h3>
         </div>
-        <p>text</p>
-        <p>text</p>
+        <p>Whether it be curiosity, fear, or a mixture of both, each member has decided to study IT to broaden their knowledge of in-demand coding languages to invest in their future. While the majority are code heavy others wish to focus on more tangible aspects of technology by either building hardware or managing people and users. </p>
+        <p>The below organisational chart highlights the role of each member in the technology team and the area they wish to specialise. The roles below were translated from each team members personal profile by identifying their ideal job and the direction they wish to proceed. </p>
         <div id="organizational_chart">
           <img src="" alt="organizational_chart.png">
         </div>
-        <p>text</p>
+        <p>There are many similarities and differences that exist between each member’s ideal job and what they wish to accomplish while studying a Bachelor of Information Technology at RMIT.</p>
         <br>
         <h4><b>Similarities</b></h4>
-        <p>text</p>
-        <p>text</p>
+        <p>All roles require that each team member leave university with a strong understanding of programming languages. The three software engineers, Jack, Dom and Yousef share a very similar journey throughout their study as they wish to minor in information technology. Mark and Gabriel are planning to become computer science experts due to their hands-on approach, while Emre is hoping to focus on application support.</p>
+        <p>Each member will share different experiences but hopefully the same gratitude after completing the core subjects of Information Technology. The prerequisite skills for the third year subject Software Engineering Project Management will align many of our elective choices. Everyone will benefit from the end-to-end procedure of project management which could potentially change our ideal job as we each get closer to graduation. The roles we have elected now are not out of reach from anyone with the exception to Mark who is bold enough to accept the challenge of leading team of people as soon as possible, but there is no doubt that toward the end of graduation each team member could go beyond their limits and become a leader in their chosen technology field.  </p>
         <div class="sim_diff_img">
           <img src="" alt="similarities.png">
         </div>
         <br>
         <h4><b>Differences</b></h4>
-        <p>text</p>
-        <p>text</p>
+        <p>Delving into further detail there are many differences in roles that set each team member apart and this is dictated by skills we want to develop before graduation. Jack, Dom and Yousef share the most similarities, but each are experimenting with different programming languages for different reasons. Jack needs to learn data extraction with APIs to support his role as a Business Analyst, Dom wishes to learn the structure of syntax that’s translatable across platforms and Yousef aspires to automate manual processes with machine learning. Gabe and Mark have experience with electronics, but Gabe is more interested in computer and graphics processing, while Mark is expanding his appreciation for smart devices using IoT. Emre is the most unique of the group, hoping to support applications in production as a conduit between business and technology.  </p>
+        <p>Other differences among the group are the industries we wish to apply our technology learnings. While Jack and Dom both want to become software engineers Dom has a passion for disability support and Jack is already working in gambling. Yousef wants to fuse artificial intelligence and his passion for middle eastern cuisine but isn’t yet sure how. Mark seeks new ways to connect technology and people by streamlining processes and Gabe increases his opportunity to work for any respected technology hardware suppliers throughout the course of his study. Emre’s charity work will see him translating technology for not-for-profit organisations making technology more accessible for people in need.</p>
         <div class="sim_diff_img">
           <img src="" alt="differences.png">
         </div>
-        <p>text</p>
+        <p>Although the core material will bind us together throughout the duration of our study it is exciting to think where we could be 5 years from now and to compare the similarities and differences then. It is within the groups best interest to stay connected over time for support because we each believe that studying at RMIT will be a defining moment for all of us.  </p>
       </div> <!-- / .profile_main -->
       <hr>
       <div class="profile_main">
