--- a/team.html
+++ b/team.html
@@ -11,6 +11,10 @@
         text-align: left;
         padding-left: 30px;
       }
+  
+        table, th, td {
+        border:1px solid black;
+       }
     </style>
   </head>
   <body>
@@ -294,7 +298,68 @@
         <p>But where does this desire come from? Each one of us has a different origin story pointing in the same direction. Dom, Yousef and Emre have just finished VCE, with Gabe and Mark only a year ahead, while Jack has returned to study 10 years after finishing school. There must be defining similarities that exist within the co-ordinated effort of this group and what differences arise when working together. The following team analysis required that each member detail their interest and experience in IT, along with their ambition to reach their end-goal job after graduation. To strengthen the team analysis members have provided their test results from the Myer-Briggs Personality test, and from two additional personality tests of their choosing. </p>
         <h4><b>Myer-Briggs</b></h4>
         <div class="table_job">
-          <p>Table</p>
+          <p><table style="width:100%">
+  <tr>
+    <th>Member</th>
+    <th colspan="6">Myer-Briggs Results</th>
+    
+  </tr>
+  <tr>
+    <td>Mark Schroeder</td>
+    <td>Debater</td>
+    <td>Extroverted</td>
+    <td>Intuitive</td>
+    <td>Thinking</td>
+    <td>Prospecting</td>
+    <td>Assertive</td>
+  </tr>
+  <tr>
+    <td>Jack Gale</td>
+    <td>Advocate</td>
+    <td>Introverted</td>
+    <td>Intuitive</td>
+    <td>Feeling</td>
+    <td>Judging</td>
+    <td>Assertive</td>
+  </tr>
+    <tr>
+    <td>Dominic Hutchinson</td>
+    <td>Advocate</td>
+    <td>Introverted</td>
+    <td>Intuitive</td>
+    <td>Feeling</td>
+    <td>Judging</td>
+    <td>Turbulent</td>
+  </tr>
+    <tr>
+    <td>Yousef Fares</td>
+    <td>Consul</td>
+    <td>Extroverted</td>
+    <td>Obsevant</td>
+    <td>Feeling</td>
+    <td>Judging</td>
+    <td>Assertive</td>
+  </tr>
+  </tr>
+    <tr>
+    <td>Gabriel Jones</td>
+    <td>Entrepreneur</td>
+    <td>Extroverted</td>
+    <td>Obsevant</td>
+    <td>Thinking</td>
+    <td>Prospecting</td>
+    <td>Assertive</td>
+  </tr>
+    <tr>
+    <td>Emre Altunsu</td>
+    <td>Architect</td>
+    <td>Introverted</td>
+    <td>Intuitive</td>
+    <td>Thinking</td>
+    <td>Judging</td>
+    <td>Assertive</td>
+  </tr>
+</table></p>
         </div>
         <h4><b>Introduction</b></h4>
         <p>The Myer-Briggs Personality Test is a self-report questionnaire designed to reveal the user’s personality type. Each personality type has its own criteria of strengths, weaknesses, and preferences that a user is more likely to identify with (Cherry, 2020). It is important to note that the results are merely an indication of the user’s interpretation to the question, and the most crucial element to obtain from a self-assessed personality test is the awareness of self. </p>
