--- a/team.html
+++ b/team.html
@@ -365,8 +365,22 @@
         <p>The Myer-Briggs Personality Test is a self-report questionnaire designed to reveal the user’s personality type. Each personality type has its own criteria of strengths, weaknesses, and preferences that a user is more likely to identify with (Cherry, 2020). It is important to note that the results are merely an indication of the user’s interpretation to the question, and the most crucial element to obtain from a self-assessed personality test is the awareness of self. </p>
         <h4><b>Advantages</b></h4>
         <p>The compiled team results of the Myer-Briggs indicate that there is an even spread of personality types among the six members with the exception to assertiveness and turbulence. The team has a healthy mix of introverted and extroverted characters who can learn from each other, but this doesn’t necessarily indicate that the group will thrive. Listed are a few tips from Lepore (n.d.) that could encourage group success between introverts and extroverts.</p>
+          <ul>
+              <li>Acknowledge strengths of each individual</li>
+                <ul>
+                  <li>Decision-making and brainstorming benefits extroverts</li>
+                  <li>Individual writing and thinking benefits introverts</li>
+                </ul>
+              <li>Provide introverts with clear communication of their role</li>
+              <li>To balance contribution schedule time for participants to speak</li>
+            </ul>  
         <p>Another positive is the even scores of thinking and feeling. Thinkers excel at technical and scientific fields when logic is vital, compared to feelers, who are more strategic at communicating change (myersbriggs.org, 2019). This creates a symbiotic relationship between empathetic characters and pragmatic theorists and could be considered advantageous for software development and implementation. Establishing and upholding key values will align the thinkers and feelers across the group and keep each other accountable. /p>
-        <h4><b>Disadvantages</b></h4>
+          <ul>
+            <li>Respect</li>
+            <li>Technology Excellence</li>
+            <li>Transparency</li>
+          </ul>  
+       <h4><b>Disadvantages</b></h4>
         <p>Although the group has more judgers than prospectors, the two traits propose a clash between team members in respect to organisation. Judgers tend to rely on certainty and are more comfortable with direction, whereas prospectors prefer a spontaneous outlook (NERIS Analytics Limited, 2015). If the team have poor time-management skills and are mostly full of judging personalities, then determining project deadlines will help ease those who require control to complete their goals. Stress response can manifest itself physically (Everly, Rosenfeld & Allen (1981), therefore prospectors may have to sacrifice their laidback attitude to prioritise the healthy and safety of the group. </p>
         <p>The group scored highest in assertiveness with only one member exhibiting tendencies of turbulence. With this many assertive individuals the group is at risk of overconfidence (NERIS Analytics Limited 2015), especially in a team environment. The behaviour could see members assume they know what is expected of each other rather than having the discussion. It would be beneficial if requirements were documented as per action item to steer the project on course and to keep members honest. </p>
         <p>Sharing the results from the Myer-Briggs aids the team to analyse who each other are and provides further understanding of each other’s reactions and choices when dealing within a group. Considering this group is online, team members could review each other’s results of the Myer-Briggs test to increase familiarity before each meeting session. </p>
