--- a/team.html
+++ b/team.html
@@ -397,7 +397,50 @@
             <img src="" alt="strengths.png">
           </div>
           <div class="profile_bottom_content">
-            <p>Table</p>
+            <p>T<table style="width:100%">
+  <tr>
+    <th>Member</th>
+    <th colspan="3">Myer-Briggs Results</th>
+    
+  </tr>
+  <tr>
+    <td>Emre Altunsu</td>
+    <td>Creativity</td>
+    <td>Dedication</td>
+    <td>Disciplined</td>
+  </tr>
+  <tr>
+    <td>Jack Gale</td>
+    <td>Innovation</td>
+    <td>Problem-Solving</td>
+    <td>Creativity</td>
+
+  </tr>
+    <tr>
+    <td>Yousef Fares</td>
+    <td>Analytical</td>
+    <td>Team-Orientated</td>
+    <td>Self-Learning</td>
+  </tr>
+    <tr>
+    <td>Dominic Hutchinson</td>
+    <td>Innovation</td>
+    <td>Problem-Solving</td>
+    <td>Analytical</td>
+  </tr>
+    <tr>
+    <td>Gabriel Jones</td>
+    <td>Communication</td>
+    <td>Adaptability</td>
+    <td>Problem-Solving</td>
+  </tr>
+    <tr>
+    <td>Emre Altunsu</td>
+    <td>Communication</td>
+    <td>Enthusiam</td>
+    <td>Dedication</td>
+  </tr>
+</table></p>
           </div>
 
         </div>
