--- a/team.html
+++ b/team.html
@@ -303,63 +303,63 @@
     <th>Member</th>
     <th colspan="6">Myer-Briggs Results</th>
     
-  </tr>
-  <tr>
-    <td>Mark Schroeder</td>
-    <td>Debater</td>
-    <td>Extroverted</td>
-    <td>Intuitive</td>
-    <td>Thinking</td>
-    <td>Prospecting</td>
-    <td>Assertive</td>
-  </tr>
-  <tr>
-    <td>Jack Gale</td>
-    <td>Advocate</td>
-    <td>Introverted</td>
-    <td>Intuitive</td>
-    <td>Feeling</td>
-    <td>Judging</td>
-    <td>Assertive</td>
-  </tr>
-    <tr>
-    <td>Dominic Hutchinson</td>
-    <td>Advocate</td>
-    <td>Introverted</td>
-    <td>Intuitive</td>
-    <td>Feeling</td>
-    <td>Judging</td>
-    <td>Turbulent</td>
-  </tr>
-    <tr>
-    <td>Yousef Fares</td>
-    <td>Consul</td>
-    <td>Extroverted</td>
-    <td>Obsevant</td>
-    <td>Feeling</td>
-    <td>Judging</td>
-    <td>Assertive</td>
-  </tr>
-  </tr>
-    <tr>
-    <td>Gabriel Jones</td>
-    <td>Entrepreneur</td>
-    <td>Extroverted</td>
-    <td>Obsevant</td>
-    <td>Thinking</td>
-    <td>Prospecting</td>
-    <td>Assertive</td>
-  </tr>
-    <tr>
-    <td>Emre Altunsu</td>
-    <td>Architect</td>
-    <td>Introverted</td>
-    <td>Intuitive</td>
-    <td>Thinking</td>
-    <td>Judging</td>
-    <td>Assertive</td>
-  </tr>
-</table></p>
+            </tr>
+            <tr>
+              <td>Mark Schroeder</td>
+              <td>Debater</td>
+              <td>Extroverted</td>
+              <td>Intuitive</td>
+              <td>Thinking</td>
+              <td>Prospecting</td>
+              <td>Assertive</td>
+            </tr>
+            <tr>
+              <td>Jack Gale</td>
+              <td>Advocate</td>
+              <td>Introverted</td>
+              <td>Intuitive</td>
+              <td>Feeling</td>
+              <td>Judging</td>
+              <td>Assertive</td>
+            </tr>
+              <tr>
+              <td>Dominic Hutchinson</td>
+              <td>Advocate</td>
+              <td>Introverted</td>
+              <td>Intuitive</td>
+              <td>Feeling</td>
+              <td>Judging</td>
+              <td>Turbulent</td>
+            </tr>
+              <tr>
+              <td>Yousef Fares</td>
+              <td>Consul</td>
+              <td>Extroverted</td>
+              <td>Obsevant</td>
+              <td>Feeling</td>
+              <td>Judging</td>
+              <td>Assertive</td>
+            </tr>
+            </tr>
+              <tr>
+              <td>Gabriel Jones</td>
+              <td>Entrepreneur</td>
+              <td>Extroverted</td>
+              <td>Obsevant</td>
+              <td>Thinking</td>
+              <td>Prospecting</td>
+              <td>Assertive</td>
+            </tr>
+              <tr>
+              <td>Emre Altunsu</td>
+              <td>Architect</td>
+              <td>Introverted</td>
+              <td>Intuitive</td>
+              <td>Thinking</td>
+              <td>Judging</td>
+              <td>Assertive</td>
+            </tr>
+          </table></p>
         </div>
         <h4><b>Introduction</b></h4>
         <p>The Myer-Briggs Personality Test is a self-report questionnaire designed to reveal the user’s personality type. Each personality type has its own criteria of strengths, weaknesses, and preferences that a user is more likely to identify with (Cherry, 2020). It is important to note that the results are merely an indication of the user’s interpretation to the question, and the most crucial element to obtain from a self-assessed personality test is the awareness of self. </p>
@@ -398,49 +398,49 @@
           </div>
           <div class="profile_bottom_content">
             <p>T<table style="width:100%">
-  <tr>
-    <th>Member</th>
-    <th colspan="3">Myer-Briggs Results</th>
-    
-  </tr>
-  <tr>
-    <td>Emre Altunsu</td>
-    <td>Creativity</td>
-    <td>Dedication</td>
-    <td>Disciplined</td>
-  </tr>
-  <tr>
-    <td>Jack Gale</td>
-    <td>Innovation</td>
-    <td>Problem-Solving</td>
-    <td>Creativity</td>
+              <tr>
+                <th>Member</th>
+                <th colspan="3">Myer-Briggs Results</th>
 
-  </tr>
-    <tr>
-    <td>Yousef Fares</td>
-    <td>Analytical</td>
-    <td>Team-Orientated</td>
-    <td>Self-Learning</td>
-  </tr>
-    <tr>
-    <td>Dominic Hutchinson</td>
-    <td>Innovation</td>
-    <td>Problem-Solving</td>
-    <td>Analytical</td>
-  </tr>
-    <tr>
-    <td>Gabriel Jones</td>
-    <td>Communication</td>
-    <td>Adaptability</td>
-    <td>Problem-Solving</td>
-  </tr>
-    <tr>
-    <td>Emre Altunsu</td>
-    <td>Communication</td>
-    <td>Enthusiam</td>
-    <td>Dedication</td>
-  </tr>
-</table></p>
+              </tr>
+              <tr>
+                <td>Emre Altunsu</td>
+                <td>Creativity</td>
+                <td>Dedication</td>
+                <td>Disciplined</td>
+              </tr>
+              <tr>
+                <td>Jack Gale</td>
+                <td>Innovation</td>
+                <td>Problem-Solving</td>
+                <td>Creativity</td>
+
+              </tr>
+                <tr>
+                <td>Yousef Fares</td>
+                <td>Analytical</td>
+                <td>Team-Orientated</td>
+                <td>Self-Learning</td>
+              </tr>
+                <tr>
+                <td>Dominic Hutchinson</td>
+                <td>Innovation</td>
+                <td>Problem-Solving</td>
+                <td>Analytical</td>
+              </tr>
+                <tr>
+                <td>Gabriel Jones</td>
+                <td>Communication</td>
+                <td>Adaptability</td>
+                <td>Problem-Solving</td>
+              </tr>
+                <tr>
+                <td>Emre Altunsu</td>
+                <td>Communication</td>
+                <td>Enthusiam</td>
+                <td>Dedication</td>
+              </tr>
+            </table></p>
           </div>
 
         </div>
@@ -454,7 +454,50 @@
             <img src="" alt="weaknesses.png">
           </div>
           <div class="profile_bottom_content">
-            <p>Table</p>
+            <p><table style="width:100%">
+              <tr>
+                <th>Member</th>
+                <th colspan="3">Myer-Briggs Results</th>
+
+              </tr>
+              <tr>
+                <td>Emre Altunsu</td>
+                <td>Time-Management</td>
+                <td>Patience</td>
+                <td>Self-Critical</td>
+              </tr>
+              <tr>
+                <td>Jack Gale</td>
+                <td>Indecisive</td>
+                <td>Empathetic</td>
+                <td>Time-Management</td>
+
+              </tr>
+                <tr>
+                <td>Yousef Fares</td>
+                <td>Lack Creativity</td>
+                <td>Indecisive</td>
+                <td>Time-Management</td>
+              </tr>
+                <tr>
+                <td>Dominic Hutchinson</td>
+                <td>Easilty Overwhelmed</td>
+                <td>Time-Management</td>
+                <td>Prioritisation</td>
+              </tr>
+                <tr>
+                <td>Gabriel Jones</td>
+                <td>Insensitive</td>
+                <td>Unstructured</td>
+                <td>Impatient</td>
+              </tr>
+                <tr>
+                <td>Emre Altunsu</td>
+                <td>Unclear</td>
+                <td>Stress-Management</td>
+                <td>Forgetful</td>
+              </tr>
+            </table>/p>
           </div> <!-- / .profile_bottom_content -->
 
         </div> <!-- / .profile_bottom_flex -->
