--- a/team.html
+++ b/team.html
@@ -397,7 +397,7 @@
             <img src="" alt="strengths.png">
           </div>
           <div class="profile_bottom_content">
-            <p>T<table style="width:100%">
+            <table style="width:100%">
               <tr>
                 <th>Member</th>
                 <th colspan="3">Myer-Briggs Results</th>
@@ -440,7 +440,7 @@
                 <td>Enthusiam</td>
                 <td>Dedication</td>
               </tr>
-            </table></p>
+            </table>
           </div>
 
         </div>
@@ -454,7 +454,7 @@
             <img src="" alt="weaknesses.png">
           </div>
           <div class="profile_bottom_content">
-            <p><table style="width:100%">
+           <table style="width:100%">
               <tr>
                 <th>Member</th>
                 <th colspan="3">Myer-Briggs Results</th>
@@ -497,7 +497,7 @@
                 <td>Stress-Management</td>
                 <td>Forgetful</td>
               </tr>
-            </table>/p>
+            </table>
           </div> <!-- / .profile_bottom_content -->
 
         </div> <!-- / .profile_bottom_flex -->
