--- a/team.html
+++ b/team.html
@@ -400,7 +400,7 @@
             <table style="width:100%">
               <tr>
                 <th>Member</th>
-                <th colspan="3">Myer-Briggs Results</th>
+                <th colspan="3">Strengths</th>
 
               </tr>
               <tr>
@@ -457,7 +457,7 @@
            <table style="width:100%">
               <tr>
                 <th>Member</th>
-                <th colspan="3">Myer-Briggs Results</th>
+                <th colspan="3">Weaknesses</th>
 
               </tr>
               <tr>
@@ -481,7 +481,7 @@
               </tr>
                 <tr>
                 <td>Dominic Hutchinson</td>
-                <td>Easilty Overwhelmed</td>
+                <td>Overwhelmed</td>
                 <td>Time-Management</td>
                 <td>Prioritisation</td>
               </tr>
