--- a/team.html
+++ b/team.html
@@ -394,7 +394,7 @@
 
         <div class="profile_bottom_flex">
           <div class="profile_bottom_content">
-            <img src="" alt="strengths.png">
+            <img src="kaleid_images/team_profile_ideal_jobs/strengthweakness/team_strengths.jpg" alt="strengths.png">
           </div>
           <div class="profile_bottom_content">
             <table style="width:100%">
@@ -451,7 +451,7 @@
 
         <div class="profile_bottom_flex">
           <div class="profile_bottom_content">
-            <img src="" alt="weaknesses.png">
+            <img src="kaleid_images/team_profile_ideal_jobs/strengthweakness/team_weaknesses.jpg" alt="weaknesses.png">
           </div>
           <div class="profile_bottom_content">
            <table style="width:100%">
