--- a/team.html
+++ b/team.html
@@ -470,19 +470,19 @@
                 <td>Jack Gale</td>
                 <td>Indecisive</td>
                 <td>Empathetic</td>
-                <td>Time-Management</td>
+                <td>Time-Manage</td>
 
               </tr>
                 <tr>
                 <td>Yousef Fares</td>
                 <td>Lack Creativity</td>
                 <td>Indecisive</td>
-                <td>Time-Management</td>
+                <td>Time-Manage</td>
               </tr>
                 <tr>
                 <td>Dominic Hutchinson</td>
                 <td>Overwhelmed</td>
-                <td>Time-Management</td>
+                <td>Time-Manage</td>
                 <td>Prioritisation</td>
               </tr>
                 <tr>
@@ -494,7 +494,7 @@
                 <tr>
                 <td>Emre Altunsu</td>
                 <td>Unclear</td>
-                <td>Stress-Management</td>
+                <td>Stress-Manage</td>
                 <td>Forgetful</td>
               </tr>
             </table>
