--- a/team.html
+++ b/team.html
@@ -391,9 +391,13 @@
           <h3><b>Strengths &amp; Weaknesses</b></h3>
         </div>
         <h4><b>Strengths</b></h4>
+         <div class="profile_bottom_flex">
+            <div class="profile_bottom_content">
           </div>
+         
           
             <table style="width:100%">
+            <div class="profile_bottom_content">
               <tr>
                 <th>Member</th>
                 <th colspan="3">Strengths</th>
