--- a/team.html
+++ b/team.html
@@ -449,9 +449,9 @@
         <br>
         <h4><b>Weaknesses</b></h4>
 
-        
+         <div class="sim_diff_img">
             <img src="kaleid_images/team_profile_ideal_jobs/strengthweakness/team_weaknesses.jpg" alt="weaknesses.png" width="500px" length ="auto">
-          
+         <div class="sim_diff_img"> 
            <table style="width:100%">
               <tr>
                 <th>Member</th>
