--- a/team.html
+++ b/team.html
@@ -495,7 +495,7 @@
               </tr>
             </table>
          
-            <img src="kaleid_images/team_profile_ideal_jobs/strengthweakness/team_weaknesses.jpg" alt="weaknesses.png" width="500px" length ="auto">
+            <center><img src="kaleid_images/team_profile_ideal_jobs/strengthweakness/team_weaknesses.jpg" alt="weaknesses.png" width="500px" length ="auto"  top="20px"></center>
          
         <p>The team is at risk of a trifecta of weaknesses; time-management, impatience, and prioritisation. It’s concerning to imagine the group succumbing to their worst traits resulting in incomplete work and not prevailing these barriers. To avoid poor time-management and prioritisation it would be beneficial to create daily schedules, consolidate similar tasks together and evade the urge to multitask (Lucid Content Team, 2017). </p>
         <p>Another major weakness that the team expressed is indecisiveness. It is alarming to compare this to the major strength problem-solving if there are scenarios that require time pressured critical thinking and risk mitigation. During moments of indecision extroverts of the group can control the room by taking polls on conflict and mediate streams of thought to create open-lines of communication (Dike 2021).  </p>
