--- a/team.html
+++ b/team.html
@@ -397,7 +397,8 @@
             <img src="kaleid_images/team_profile_ideal_jobs/strengthweakness/team_strengths.jpg" alt="strengths.png">
           
         
-            <table style="width:100%">
+            <table style="width:100%";
+                          bottom-margin: 20px;>
               <tr>
                 <th>Member</th>
                 <th colspan="3">Strengths</th>
