--- a/team.html
+++ b/team.html
@@ -361,7 +361,10 @@
             </tr>
           </table></p>
         </div>
-        <h4><b>Introduction</b></h4>
+    
+        <center><img src="kaleid_images/team_profile_ideal_jobs/myer_briggs/myer_briggs_results.png" alt="myer-briggs.png" width="70% length="auto"></center>
+        
+    <h4><b>Introduction</b></h4>
         <p>The Myer-Briggs Personality Test is a self-report questionnaire designed to reveal the user’s personality type. Each personality type has its own criteria of strengths, weaknesses, and preferences that a user is more likely to identify with (Cherry, 2020). It is important to note that the results are merely an indication of the user’s interpretation to the question, and the most crucial element to obtain from a self-assessed personality test is the awareness of self. </p>
         <h4><b>Advantages</b></h4>
         <p>The compiled team results of the Myer-Briggs indicate that there is an even spread of personality types among the six members with the exception to assertiveness and turbulence. The team has a healthy mix of introverted and extroverted characters who can learn from each other, but this doesn’t necessarily indicate that the group will thrive. Listed are a few tips from Lepore (n.d.) that could encourage group success between introverts and extroverts.</p>
