--- a/team.html
+++ b/team.html
@@ -540,9 +540,16 @@
           References
         </div>
         <ol>
-          <li>reference1</li>
-          <li>reference2</li>
-          <li>reference3</li>
+          <li>Cherry, K. (2020). An Overview of the Myers-Briggs Type Indicator. [online] Verywell Mind. Available at: https://www.verywellmind.com/the-myers-briggs-type-indicator-2795583.</li>
+          <li>Lepore, M. (n.d.). How to Improve Teamwork: The Introversion/Extroversion Variable. [online] blog.thinkherrmann.com. Available at: https://blog.thinkherrmann.com/how-to-improve-teamwork-the-introversion/extroversion-variable#:~:text=Here%20are%20some%20tips%20he [Accessed 14 Apr. 2022].</li>
+          <li>Myersbriggs.org. (2019). The Myers & Briggs Foundation - Thinking or Feeling. [online] Available at: https://www.myersbriggs.org/my-mbti-personality-type/mbti-basics/thinking-or-feeling.htmreference3</li>
+          <li>NERIS Analytics Limited (2015). Tactics: Judging vs. Prospecting. [online] 16personalities.com. Available at: https://www.16personalities.com/articles/tactics-judging-vs-prospecting.</li>
+          <li>Everly, G. S., Rosenfeld, R., & Allen, R. J. (1981). The nature and treatment of the stress response : a practical guide for clinicians (1st ed. 1981.). Plenum Press. https://doi.org/10.1007/978-1-4613-3240-4</li>
+          <li>NERIS Analytics Limited (2015). Identity: Assertive vs. Turbulent. [online] 16personalities.com. Available at: https://www.16personalities.com/articles/identity-assertive-vs-turbulent.</li>
+          <li>Point Jupiter - Web development & UX design agency. (2019). Soft Skills for Software Developers - Ultimate Guide - Point Jupiter. [online] Available at: https://pointjupiter.com/soft-skills-software-developer-need-ultimate-guide/.</li>
+          <li>corporatetraining.usf.edu. (n.d.). What Does a Leader Look Like? Identifying Real Leadership Qualities. [online] Available at: https://corporatetraining.usf.edu/blog/what-does-a-leader-look-like-identifying-real-leadership-qualities [Accessed 14 Apr. 2022].</li>
+          <li>Lucid Content Team (2017). 10 Tips for Mastering Time Management at Work | Lucidchart Blog. [online] www.lucidchart.com. Available at: https://www.lucidchart.com/blog/time-management-at-work.</li>
+          <li>Dike, M. (2021). How to Deal With Indecision When You’re an Introvert Who Overthinks. [online] IntrovertDear.com. Available at: https://introvertdear.com/news/how-to-deal-with-indecision-when-youre-an-introvert-who-overthinks/ [Accessed 14 Apr. 2022].</li>
         </ol>
       </div> <!-- / .profile_main -->
     </main>
