--- a/tech.html
+++ b/tech.html
@@ -134,9 +134,14 @@
           <h3><u>IT Technologies References</u></h3>
           <h4><b>Machine Learning</b></h4>
           <ol>
-            <li>reference1</li>
-            <li>reference2</li>
-            <li>reference3</li>
+            <li>Docs azure ML, Author: Gilley S., Gayhardt L., Gronlund C., Phansen D. & Mungi R., Apr 1 2022: https://docs.microsoft.com/en-us/azure/machine-learning/overview-what-is-azure-machine-learning Accessed: 12/4/2022 </li>
+            <li>What is using Azure Machine Learning Studio, Author: Enlyft, n.d.: https://enlyft.com/tech/products/azure-machine-learning Accessed: 12/4/2022 </li>
+            <li>Windows Defender ATP machine learning, Author: Microsoft Defender Security Research Team, Aug 3 2017: https://www.microsoft.com/security/blog/2017/08/03/windows-defender-atp-machine-learning-detecting-new-and-unusual-breach-activity/ Accessed: 12/4/2022 </li>
+            <li>How Machine Learning is Changing the World, Author: Singh V., Feb 18 2020: https://www.datasciencecentral.com/how-machine-learning-is-changing-the-world/ Accessed: 14/4/2022 </li>
+            <li>Self-driving, wave of future, Author: Gibson R., Oct 4 2020: https://www.castanet.net/news/Canada/312180/Will-self-driving-cars-ever-be-safer-than-humans- Accessed: 14/4/2022 </li>
+            <li>Will Pharmacists Be Replaced By AI and Robots?, Author: Rajeckas S., n.d.: https://www.futureguidebook.com/pharmacists-replaced-by-ai/ Accessed: 16/4/2022 </li>
+            <li>These Are the Jobs Most Threatened by the Future of Automation, Author: Hilary George-Parkin, Jan 28 2019: https://footwearnews.com/2019/business/retail/automation-ai-jobs-future-retail-1202736043/ Accessed: 16/4/2022 </li>
+            <li>Beware the Privacy Violations in Artificial Intelligence Applications, Author: Guy Pearce, May 28 2021: https://www.isaca.org/resources/news-and-trends/isaca-now-blog/2021/beware-the-privacy-violations-in-artificial-intelligence-applications Accessed: 16/4/2022 </li>
           </ol>
           <h4><b>Natural Language Processing</b></h4>
           <ol>
