--- a/tech.html
+++ b/tech.html
@@ -145,9 +145,13 @@
           </ol>
           <h4><b>Natural Language Processing</b></h4>
           <ol>
-            <li>reference1</li>
-            <li>reference2</li>
-            <li>reference3</li>
+            <li>The Future of Jobs Report 2020, Authors: Schwab K. and Zahidi S., Oct 20 2020: https://www3.weforum.org/docs/WEF_Future_of_Jobs_2020.pdf Accessed: 18/4/2022 </li>
+            <li>The Future of Jobs Report 2020, Authors: Schwab K. and Zahidi S., Oct 20 2020: https://www3.weforum.org/docs/WEF_Future_of_Jobs_2020.pdf Accessed: 18/4/2022 [industry profiles: Page: 119] </li>
+            <li>The Future of Jobs Report 2020, Authors: Schwab K. and Zahidi S., Oct 20 2020: https://www3.weforum.org/docs/WEF_Future_of_Jobs_2020.pdf Accessed: 18/4/2022 [financial services profile: Page 134] </li>
+            <li>The Future of Jobs Report 2020, Authors: Schwab K. and Zahidi S., Oct 20 2020: https://www3.weforum.org/docs/WEF_Future_of_Jobs_2020.pdf Accessed: 18/4/2022 [mining and metals profile: Page 142] </li>
+            <li>Replika AI, n.d.: https://replika.ai/ Accessed: 18/4/2022 </li>
+            <li>Depression, Author: World Health Organization, Sep 13 2021: https://www.who.int/news-room/fact-sheets/detail/depression Accessed: 18/4/2022 </li>
+            <li>The A-Z Of Replika Chatbot, Author: Partap A., Jan 20 2022: https://botpenguin.com/replika-chatbot/ Accessed: 18/4/2022 </li>
           </ol>
           <h4><b>Cyber Security</b></h4>
           <ol>
