--- a/project.html
+++ b/project.html
@@ -93,9 +93,7 @@
           <h3><u>References</u></h3>
         </div>
         <ol>
-          <li>reference1</li>
-          <li>reference2</li>
-          <li>reference3</li>
+          <li>Hutchinson, D 2022, ‘Introduction to IT - Assignment 1; S3943438’, Dominic Hutchinson, pp. 1-2</li>
         </ol>
       </div> <!-- / .profile_main -->
       
