--- a/tech.html
+++ b/tech.html
@@ -155,9 +155,9 @@
           </ol>
           <h4><b>Cyber Security</b></h4>
           <ol>
-            <li>reference1</li>
-            <li>reference2</li>
-            <li>reference3</li>
+            <li>Zero Trust Cybersecurity: ‘Never Trust, Always Verify.’ (2021, November 9). NIST. https://www.nist.gov/blogs/taking-measure/zero-trust-cybersecurity-never-trust-always-verify#:%7E:text=In%20a%20nutshell%2C%20zero%20trust%20assumes%20that%20the,zero%20trust%20means%20for%20cybersecurity%20in%20a%20minute.</li>
+            <li>Chanthadavong, A. (2020, September 7). Service NSW reveals 738GB of customer data was stolen during email breach. ZDNet. https://www.zdnet.com/article/service-nsw-reveals-738gb-of-customer-data-was-stolen-during-email-breach/</li>
+            <li>Writer, C. S. (2019, June 21). Industrial Cybersecurity Starts at the Embedded Hardware Platform. Tech Monitor. https://techmonitor.ai/technology/cybersecurity/industrial-cybersecurity-embedded-hardware</li>
           </ol>
           <h4><b>Cloud Services</b></h4>
           <ol>
